--- a/style.css
+++ b/style.css
@@ -66,6 +66,21 @@ ul.info-box {
 	list-style: none;
 }
 
+#widgets .rsvp-images ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.rsvp-images img {
+	float: left;
+}
+
+.rsvp-images img {
+	float: left;
+	margin: 0 10px 10px 0;
+}
+
 @media screen and (max-width: 650px) {
 	.has-image .site-name {
 	}
